Finished user section, main section is next, need to make template for books

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>📚 Library</title>
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/awesome-icons/css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/awesome-icons/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <script src="script/main.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
 
       <div class="top-wrapper">
+        <div class="top-menu top-menu">
+          <i class="fa-solid fa-bars top-menu-icon"></i>
+        </div>
         <div class="top-center">
           <div class="top-icon">
             📚
@@ -26,9 +29,41 @@
         </div>
       </div>
 
-      <div class="user-wrapper">
-        
+      <div class="middle-wrapper">
+        <div class="user-wrapper">
+          <div class="user-icon-wrapper">
+            <img src="img/icon1.png" alt="Photo of Jorge Luis Borges" class="user-icon"> 
+          </div> 
+          <div class="user-name">
+            <em>@jorgeluisborges</em> 
+          </div>
+        </div>
+
+        <div class="stats-wrapper">
+          <div class="mid-read-wrapper">
+            <div class="mid-read">
+              Books read
+            </div>
+            <div class="mid-read-stat">
+              5
+            </div>
+          </div>
+          <div class="mid-pages-wrapper">
+            <div class="mid-pages">
+              Pages read
+            </div>
+            <div class="mid-pages-stat">
+              290
+            </div>
+          </div>
+        </div>
+
+        <div class="add-new-book-wrapper">
+          <i class="fa-solid fa-circle-plus add-new-book-button"></i>
+        </div>
+
       </div>
+
       <div class="main-wrapper">
         
       </div>
