--- a/index.html
+++ b/index.html
@@ -65,7 +65,23 @@
       </div>
 
       <div class="main-wrapper">
-        
+        <div class="book-wrapper">
+          <div class="book">
+            <div class="book-title">
+              Linux 101
+            </div>
+            <div class="book-author">
+              Linus Torvalds
+            </div>
+            <div class="book-pages">
+              290
+            </div>
+            <div class="book-interactions">
+              <i class="fa-solid fa-trash-can delete-book-button"></i>
+              <i class="fa-solid fa-bookmark favorite-book-button"></i>  
+            </div>
+          </div>
+        </div> 
       </div>
     </div>
   </body>
