Book desing is finished, going to make the JS side now

--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
               Linus Torvalds
             </div>
             <div class="book-pages">
-              290
+              290 pages
             </div>
             <div class="book-interactions">
-              <i class="fa-solid fa-trash-can delete-book-button"></i>
-              <i class="fa-solid fa-bookmark favorite-book-button"></i>  
+              <div class="delete-wrapper">
+                <i class="fa-solid fa-trash-can delete-book-button"></i>
+              </div>
+              <div class="favorite-wrapper">
+                <i class="fa-regular fa-bookmark favorite-book-button"></i>
+              </div>
             </div>
           </div>
         </div> 
