Added function to create new books, working on pop up, need to work on book object to create properties and assign it to each book respectively

--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
   <body>
     <script>0</script>
     <div class="wrapper">
+      
+      <div class="modal-wrapper">
+        <div class="close-button-wrapper">
+          <i class="fa-solid fa-circle-xmark cloe-button"></i> 
+        </div>
+        <div class="title-input-wrapper">
+          <input type="text" placeholder="Title" class="title-input"> 
+        </div>
+        <div class="author-input-wrapper">
+          <input type="text" placeholder="Author" class="author-input"> 
+        </div>
+        <div class="pages-input-wrapper">
+          <input type="text" placeholder="Pages number" class="pages-input">
+        </div>
+        <div class="read-toggle">
+          <input type="checkbox" <label>Read</label>
+        </div>
+        <div class="add-book-wrapper">
+          <button type="button" class="add-book">Add Book</button>
+        </div>
+      </div>
 
       <div class="top-wrapper">
         <div class="top-menu top-menu">
@@ -65,7 +86,7 @@
 
       </div>
 
-      <div class="main-wrapper">
+      <div class="main-wrapper" id="library">
         <div class="book-wrapper">
           <div class="book">
             <div class="book-title">
