Skeleton made, needs prompts and functions to add books

--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
     <script src="./Js/script.js"></script>
     <title>📚 Library</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="website-name">Librafy</div>
+      </header>
+      <main class="main">
+        <button class="new-book">+</button>
+      </main>
+      <footer class="footer">
+        <div>Copyright © 2024 facundoduhau</div>
+      </footer>
+    </div>
+  </body>
 </html>
